--- a/hw1.html
+++ b/hw1.html
@@ -9,7 +9,7 @@
         Where I grew up: Northwest Arkansas <br />
         Unexpected Fact: I'm a coxswain <br />
         My favorite place:The Kello Kitty Backrooms<br />
-        <img src = "C:\Users\tek15\Downloads\Hello Kitty themepark.jpg" 
+        <img src = "https://images.unsplash.com/photo-1563564120768-da63ef4f7446?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=868&q=80" 
              alt = "Hello Kitty theme park" width ="400"/>
 
     </body>
