Updating hw1 answers
Correcting "My favorite place to Hello Kitty theme park"

--- a/hw1.html
+++ b/hw1.html
@@ -10,7 +10,7 @@
         Unexpected Fact: I'm a coxswain <br />
         My favorite place:The Kello Kitty Backrooms<br />
         <img src = "https://images.unsplash.com/photo-1563564120768-da63ef4f7446?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=868&q=80" 
-             alt = "Hello Kitty theme park" width ="400"/>
+             alt = "Three Hello Kitty Figures infront of an amusement ride" width ="400"/>
 
     </body>
 </html>
